--- a/Tema4/index2/logo.html
+++ b/Tema4/index2/logo.html
@@ -4,7 +4,8 @@
 Логотип
 </title>
 </head>
-<body background="https://st.depositphotos.com/1044545/1837/v/950/depositphotos_18379891-stock-illustration-biology-sketches-on-school-board.jpg">
+<body>
+  <img src="https://st.depositphotos.com/1044545/1837/v/950/depositphotos_18379891-stock-illustration-biology-sketches-on-school-board.jpg" alt="Біологія">
 <p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p>
 </body>
 </html>
