--- a/Tema4/index2/index21.html
+++ b/Tema4/index2/index21.html
@@ -5,10 +5,9 @@
 </title>
 </head>
 <body>
-  <p align=center><Font face="Arial Black" size=7 color="#8E44AD">Структурування веб сайтів</Font></p>
-<ul>
-<li><a href="index21/index211.html"><Font face="Arial Black" size=6 color="#5499C7">Що таке веб-сторінка?</Font></a></li>
-<li><a href="index21/index212.html"><Font face="Arial Black" size=6 color="#5499C7">Що таке веб-сайт?</Font></a></li>
-</ul>
+  <ul><p align=center><Font face="Arial Black" size=7 color="#8E44AD">Веб-сайти</Font></p>
+    <Font face="Arial Black" size=6 color="#5499C7"><li><a href="index21/index211.html">Що таке веб-сторінка?</a></li>
+    <li><a href="index21/index212.html">Що таке веб-сайт?</a></li></Font>
+  </ul>
 </body>
 </html>
