--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -9,7 +9,7 @@
     <frame src="logo.html" name="logo">
   <frameset cols="75%">
     <frame src="menu.html" name="menu">
-    <frame name="content">
+    <frame name="CONTENT">
 </frameset>
 </frameset>
 </html>
