--- a/Tema4/index2/menu.html
+++ b/Tema4/index2/menu.html
@@ -8,13 +8,13 @@
 <body bgcolor="#E9F7EF">
 <ul>
 <li>
-<a href="index11.html" target="content"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a>
+<a href="index11.html" target="CONTENT"><Font face="Segoe Print" size=6 color="#1D8348">Ботаніка</a>
 </li>
 <li>
-<a href="index12.html" target="content"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a>
+<a href="index12.html" target="CONTENT"><Font face="Segoe Print" size=6 color="#1D8348">Зоологія</a>
 </li>
 <li>
-<a href="index13.html" target="content"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a>
+<a href="index13.html" target="CONTENT"><Font face="Segoe Print" size=6 color="#1D8348">Анатомія</a>
 </li>
 </ul>
 </body>
