--- a/Tema4/index2/index21/index212.html
+++ b/Tema4/index2/index21/index212.html
@@ -7,6 +7,6 @@
 <body>
   <p align=center><Font face="Arial Black" size=7 color="#8E44AD">Веб-сайт<Font></p><br>
 <p><Font face="Arial Black" size=5 color="#5499C7">Сайт, або веб-сайт — сукупність веб-сторінок, доступних у мережі Інтернет, які об'єднані як за змістом, так і за навігацією під єдиним доменним ім'ям. Фізично сайт може розміщуватися як на одному, так і на кількох серверах.</p>
-    <p align=right><a href="index212/index2121.html">Повернутися на головну сторінку</a></p></Font>
+    <p align=right><input type="button" onclick="history.back();" value="Назад"/></p></Font>
 </body>
 </html>
