--- a/Tema4/index2/index22.html
+++ b/Tema4/index2/index22.html
@@ -5,11 +5,11 @@
     Фрейми
   </title>
 </head>
-  <frameset cols="25%">
-    <frame src="logo.html" name="logo">
-  <frameset cols="75%">
+<frameset rows="25%, 75%">
+  <frame src="logo.html" name="logo" scrolling="no" noresize>
+  <frameset cols="100%, *">
     <frame src="menu.html" name="menu">
     <frame src="CONTENT.html" name="CONTENT">
-</frameset>
+  </frameset>
 </frameset>
 </html>
