--- a/Tema4/index2/index12.html
+++ b/Tema4/index2/index12.html
@@ -1,7 +1,9 @@
 <!DOCTYPE  HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
+  <title>
 Зоологія
+  </title>
 </head>
 <body>
 <Font face="Segoe Print" size=6 color="#424949">Зоологія — це розділ біології, що вивчає тварин та їхні взаємозв'язки з довкіллям.</Font>
