--- a/Tema4/index2/logo.html
+++ b/Tema4/index2/logo.html
@@ -5,7 +5,7 @@
 Логотип
 </title>
 </head>
-<body>
-<p align=left valign=middle><Font face="Segoe Print" size=7 color="green"><b>Біологія</b></Font></p>
+<body background="https://apollo-ireland.akamaized.net/v1/files/eao9wwakerbh1-UA/image;s=644x461">
+<p align=left valign=middle><Font face="Segoe Print" size=7 color="white"><b>Біологія</b></Font></p>
 </body>
 </html>
