--- a/Tema5/index1.html
+++ b/Tema5/index1.html
@@ -5,12 +5,12 @@
 </title>
 </head>
 <body bgcolor="#8E44AD">
-<p align=center><Font face="Segoe Print size=7 color="white">Сайт Габи Юлії Сергіївни</Font></p>
+<p align=center><Font face="Segoe Print" size=7 color="white">Сайт Габи Юлії Сергіївни</Font></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print size=6 color="#F4ECF7">Фотографії</Font></p>
+<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Фотографії</Font></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print size=6 color="#F4ECF7">Музика</Font></p>
+<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Музика</Font></p>
 <hr size=3 color="white">
-<p align=center><Font face="Segoe Print size=6 color="#F4ECF7">Відео</Font></p>
+<p align=center><Font face="Segoe Print" size=6 color="#F4ECF7">Відео</Font></p>
 </body>
 </html>
